<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_encuestas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="@string/perfil">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/titulo_perfil" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:title="@string/menu_share" />
        </menu>
    </item>
</menu>
